<resources>
    <string name="app_name">I Study</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Password</string>
    <string name="registro_tittle">Registro</string>
    <string name="logout">Salir</string>
    <string name="campo_obligatorio">Campo Obligatorio</string>
</resources>
