<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".LoginActivity"
    android:id="@+id/login_layout">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/error_message_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/login_wrapper"
        android:layout_below="@+id/logo"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usuarioLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:textColor="#e42525"
            android:textAlignment="center"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/register_wrapper">

        <Button
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/login_button"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/loading_login"
            android:theme="@style/Progressbar.White"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:indeterminate="true"
            android:translationZ="2dp"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_alignEnd="@id/login"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/register_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/register_button"
            android:textAlignment="center"
            android:textSize="20sp"
            android:elevation="2dp"/>

        <ProgressBar
            android:id="@+id/loading_register"
            android:theme="@style/Progressbar.White"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:indeterminate="true"
            android:translationZ="2dp"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_alignEnd="@id/register"
            />

    </RelativeLayout>

</RelativeLayout>